--- a/.github/workflows/lastfm_sync.yml
+++ b/.github/workflows/lastfm_sync.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 20
 
-      - run: cd scripts && npm ci
+      - run: cd scripts && npm install
 
       - run: cd scripts && npx ts import_scobbles.ts
         env:
