--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,12 +1,11 @@
 {
   "name": "scrobble-importer",
-  "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^2.0.0",
     "node-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1",
+    "tsx": "^4.0.0",
     "typescript": "^5.3.0"
   }
 }
