--- a/.github/workflows/lastfm_sync.yml
+++ b/.github/workflows/lastfm_sync.yml
@@ -2,7 +2,7 @@ name: Last.fm sync
 
 on:
   schedule:
-    - cron: "0 9 * * 1" # Every Monday at 09:00 UTC
+    - cron: "0 6 * * *" # Every day at 06:00 UTC
   workflow_dispatch: 
 
 jobs:
